--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div>
 
-    <h3>Prueba</h3>
+    <h3>Prueba del Portal Cautivo</h3>
 
     <p>Hola, esta es una pequeña prueba de la configuración CORS del Portal Cautivo de Tigo.</p>
     <p>A continuación aparecerán algunos datos de tu línea:</p>
