--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </script>
 
     <p>Un saludo</p>
+    <p><b>¿Contacto para consultorías, asados, etc.?:</b> matias@insaurral.de :)</p>
 
   </div>
 </body>
